--- a/package.json
+++ b/package.json
@@ -6,29 +6,26 @@
     "build": "svelte-kit build",
     "preview": "svelte-kit preview",
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-    "deploy": "node ./gh-pages.js"
+    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
   },
   "devDependencies": {
-    "@sveltejs/adapter-static": "^1.0.0-next.21",
     "@sveltejs/kit": "next",
     "autoprefixer": "^10.4.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^3.2.1",
-    "gh-pages": "^3.2.3",
     "postcss": "^8.3.11",
     "prettier": "^2.4.1",
     "prettier-plugin-svelte": "^2.4.0",
     "svelte": "^3.42.6",
     "tailwindcss": "^2.2.19",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.2",
+    "@sveltejs/adapter-vercel": "next"
   },
   "type": "module",
   "dependencies": {
     "daisyui": "^1.16.2",
     "svelte-particles": "^1.20.4",
-    "svelte-preprocess": "^4.9.8",
     "tsparticles": "^1.37.4"
   }
 }
