--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
   },
   "devDependencies": {
+    "@sveltejs/adapter-vercel": "next",
     "@sveltejs/kit": "next",
     "autoprefixer": "^10.4.0",
     "eslint": "^7.32.0",
@@ -19,13 +20,13 @@
     "prettier-plugin-svelte": "^2.4.0",
     "svelte": "^3.42.6",
     "tailwindcss": "^2.2.19",
-    "typescript": "^4.5.2",
-    "@sveltejs/adapter-vercel": "next"
+    "typescript": "^4.5.2"
   },
   "type": "module",
   "dependencies": {
     "daisyui": "^1.16.2",
     "svelte-particles": "^1.20.4",
+    "svelte-transitions": "^1.2.0",
     "tsparticles": "^1.37.4"
   }
 }
