--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "prettier": "^2.4.1",
     "prettier-plugin-svelte": "^2.4.0",
     "svelte": "^3.42.6",
-    "tailwindcss": "^2.2.19",
+    "tailwindcss": "^3.0.23",
     "typescript": "^4.5.2"
   },
   "type": "module",
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "daisyui": "^1.16.2",
+    "svelte-awesome": "^2.4.6",
     "svelte-particles": "^1.20.4",
     "svelte-transitions": "^1.2.0",
     "tsparticles": "^1.37.4"
